--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">MyVideo</string>
+    <string name="tv_welcome">正在启动中...</string>
+    <string name="rb_main_video">本地视频</string>
+    <string name="rb_main_audio">本地音频</string>
+    <string name="rb_main_net_video">网络视频</string>
+    <string name="rb_main__net_audio">网络音频</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
